<resources>
    <string name="app_name">Second Hand Car</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset">Reset</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_booking">Booking</string>
    <string name="nav_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="contactNo">Contact Number</string>

    <string name="save">Save</string>
    <string name="update">Update</string>

    <string name="customer_id">Customer ID</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="edit">Edit</string>
    <string name="profile_info">Profile Info</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="caption_reset_password">Enter your email address and we will send you an email to recover your password</string>
    <string name="change_password">Reset Password</string>
    <string name="confirmPw">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="my_booking">My Booking</string>
    <string name="searchbtn">Search your desired car</string>
    <string name="car_brand">"Car Brand  : "</string>
    <string name="car_model">"Car Model : "</string>
    <string name="recommendCar">Recommend me a car</string>
    <string name="price_range">Price Range</string>
    <string name="mileage">Mileage</string>
    <string name="year">Year</string>
    <string name="purpose">Purpose: </string>
    <string name="color">Color: </string>
    <string name="search_result">Search Result</string>

    <string name="title_home">Home</string>
    <string name="title_appointment">My Booking </string>
    <string name="title_loanCalc">Loan Calculator</string>
    <string name="title_profile">My Profile</string>
    <string name="car_name">Car Name:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>

    <string-array name="purpose">
        <item>Daily Drive</item>
        <item>Mountain Climbing</item>
        <item>Tournament(Racing/Decoration)</item>
        <item>Public Transportation (Taxi)</item>
    </string-array>

    <string-array name="sort_by">
        <item>From low to high</item>
        <item>From high to low</item>
    </string-array>

    <string-array name="cancel_reason">
        <item>Emergency</item>
        <item>Not interested in this car anymore</item>
        <item>Selected wrong car</item>
    </string-array>

    <string name="title_booking_detail">Booking Detail</string>
    <string name="price">Price:</string>
    <string name="dealer_location">Dealer Location:</string>
    <string name="agent">Agent:</string>
    <string name="contact_no">"Contact Number: "</string>
    <string name="agent_email">Agent Email:</string>
    <string name="app_date">Appiontment Date:</string>
    <string name="app_time">Appointment Time: </string>
    <string name="title_chooseDateTime">Choose Date Time</string>
    <string name="location">Location</string>
    <string name="make_an_appointment">Make An Appointment</string>
    <string name="car_price">Price</string>
    <string name="calculate">Calculate</string>
    <string name="car_price_rm">Car Price (RM)</string>
    <string name="down_payment_rm">Down Payment (RM)</string>
    <string name="interest_rate">Interest Rate %</string>
    <string name="loan_period_year">Loan Period (Year)</string>

    <string name="max_year">Max Year:</string>
    <string name="min_mileage">Min Mileage: </string>
    <string name="min_price">Min Price: </string>
    <string name="min_year_1950">Min Year: 1950</string>
    <string name="send_appointment_request">Send Appointment Request</string>

    <string name="EditProfile">Edit My Profile</string>
    <string name="logout">Logout</string>
    <string name="RateUs">Rate Us</string>
    <string name="AboutUs">About Us</string>
    <string name="Share">Share Our App</string>
    <string name="welcome">Welcome !</string>

    <string name="title_recommend_car">Car Recommendation</string>
    <string name="title_car_detail">Car Details</string>
    <string name="title_edit_prof">Edit Profile</string>
    <string name="title_reg">Registration</string>
    <string name="title_reset_pw">Password Recovery</string>
    <string name="back">Back</string>

    <string name="cust_id">Customer ID: </string>
    <string name="cust_name">Name:  </string>
    <string name="cust_contactNo">Contact number:   </string>
    <string name="cust_email">Email address:    </string>
    <string name="title_search_result">Search Result</string>
    <string name="edit_booking">Edit Booking</string>

    <string name="get_maxPrice">Max Price:</string>
    <string name="get_minPrice">Min Price:</string>
    <string name="get_minMileage">Min Mileage:</string>
    <string name="km">km</string>
    <string name="get_maxMileage">Max Mileage:</string>
    <string name="min_year">Min Year:</string>
    <string name="description">Description :</string>

    <string name="login_url">https://dewy-minuses.000webhostapp.com/Login.php</string>
    <string name="reg_url">https://dewy-minuses.000webhostapp.com/Registration.php</string>
    <string name="get_cust_url">https://dewy-minuses.000webhostapp.com/GetCustEmail.php</string>
    <string name="update_prof_url">https://dewy-minuses.000webhostapp.com/CustUpdateProf.php</string>
    <string name="update_password_url">https://dewy-minuses.000webhostapp.com/CustUpdatePwd.php</string>

    <string name="insert_booking_url">https://dewy-minuses.000webhostapp.com/InsertBooking.php</string>
    <string name="get_appointment_url">https://dewy-minuses.000webhostapp.com/GetAllAppointment.php</string>
    <string name="get_agent_url">https://dewy-minuses.000webhostapp.com/getAgent.php</string>
    <string name="get_my_booking_url">https://dewy-minuses.000webhostapp.com/GetMyBooking.php</string>
    <string name="get_booking_detail_url">https://dewy-minuses.000webhostapp.com/getBookingDetail.php</string>
    <string name="get_car_brand_url">http://dewy-minuses.000webhostapp.com/brand.php</string>
    <string name="get_car_model_url">https://dewy-minuses.000webhostapp.com/getCarModel.php</string>
    <string name="get_dealer_location_url">https://dewy-minuses.000webhostapp.com/getDealerLocation.php</string>
    <string name="title_edit_booking">Edit Booking</string>
    <string name="update_booking">Update booking</string>
    <string name="update_app_url">https://dewy-minuses.000webhostapp.com/updateAppointment.php</string>
    <string name="msg_confirm_updt">Confirm to update booking date time?</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="cancel_booking_url">https://dewy-minuses.000webhostapp.com/cancel_booking.php</string>

    <string name="get_search_result_url">https://dewy-minuses.000webhostapp.com/getSearchResult.php</string>
    <string name="get_recommended_car_url">https://dewy-minuses.000webhostapp.com/getRecommCar.php</string>


    <string name="tip">*Please provide some tips to let us recommend you*</string>
    <string name="sort_by">"Sort by : "</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="cancel_book">Cancel booking</string>
    <string name="caption_qrcode">QR code generated</string>
    <string name="title_search_car">Search Car</string>

    <string name="recommend">Recommend me</string>
    <string name="title_recommended_car">Recommended Cars</string>
    <string name="tips1Met">- Met</string>
    <string name="tips2Booked">- Booked</string>
    <string name="tips3Cancelled">- Cancelled</string>
    <string name="tips4Pending">- Pending</string>
    <string name="qrcode_msg">*This QR code is only for agent to scan*</string>
    <string name="qrcode_msg1">*Please show to your agent when meet up*</string>
    <string name="scan_me">SCAN ME</string>
    <string name="dis_year">Year:</string>
    <string name="dis_milegae">Mileage:</string>
    <string name="dis_price_range">Price range:</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="caption_enter_new_password">Please enter your new password and confirm password</string>
    <string name="recover">Recover</string>
    <string name="recover_password">Recover your password</string>
    <string name="next">Next</string>
    <string name="update_password_email_url">https://dewy-minuses.000webhostapp.com/PwdRecovery.php</string>
    <string name="enter_code">Enter Code</string>
    <string name="code_caption">Please enter the code after receive email</string>
    <string name="six_digit_code">Code</string>
    <string name="update_code_url">https://dewy-minuses.000webhostapp.com/updateCode.php</string>
    <string name="caption_enter_newpw">Enter new password</string>
    <string name="caption_newpw">Please enter new password and confirm password</string>

</resources>
