<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.edu.tarc.secondhandcar.SearchCarResultActivity">

    <ProgressBar
        android:id="@+id/searchingResult"
        android:layout_width="77dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:scrollbarSize="18dp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Spinner>

    <ListView
        android:id="@+id/listViewCarResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/sort_by"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alwaysDrawnWithCache="false"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSortBy">


        <android.support.design.widget.TabItem
            android:id="@+id/tIPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/car_price" />

        <android.support.design.widget.TabItem
            android:id="@+id/tIMileage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/mileage" />

        <android.support.design.widget.TabItem
            android:id="@+id/tIYear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/year" />
    </android.support.design.widget.TabLayout>
</android.support.constraint.ConstraintLayout>
