<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.edu.tarc.secondhandcar.ViewProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/buttonChangePw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/change_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="102dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCustEmail" />

        <TextView
            android:id="@+id/textViewCustEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="18dp"
            app:layout_constraintLeft_toRightOf="@+id/textViewEm"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCustContNo"
            app:layout_constraintHorizontal_bias="0.502" />

        <TextView
            android:id="@+id/textViewEm"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="17dp"
            android:gravity="end"
            android:text="@string/cust_email"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewchp" />

        <TextView
            android:id="@+id/textViewCustContNo"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toRightOf="@+id/textViewchp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCustName" />

        <TextView
            android:id="@+id/textViewchp"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:text="@string/cust_contactNo"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewcn" />

        <TextView
            android:id="@+id/textViewCustName"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toRightOf="@+id/textViewcn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCustID" />

        <TextView
            android:id="@+id/textViewcn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:text="@string/cust_name"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewcID" />

        <TextView
            android:id="@+id/textViewCustID"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="18dp"
            app:layout_constraintLeft_toRightOf="@+id/textViewcID"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewcID"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:text="@string/cust_id"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
